fixed the border that was bleeding the content behind in the login page

--- a/styles.css
+++ b/styles.css
@@ -1824,7 +1824,9 @@ textarea {
   z-index: 50;
   width: 100%;      
   height: 100%;
-  background-color: #6a9da1;
+  background-color: #f1f1f1;
+  box-shadow: 6px 6px 12px rgba(26, 35, 50, 0.15), 
+              -6px -6px 12px rgba(255, 255, 255, 0.7);
   padding: 0rem;
   box-sizing: border-box;
   position: absolute;        /* ADD */
@@ -1840,12 +1842,12 @@ textarea {
 
 .login-cover-right {
   transform: translateX(0%);
-  border-radius: 170px var(--radius-xl) var(--radius-xl) 170px;
+  border-radius: 160px var(--radius-xl) var(--radius-xl) 160px;
 }
 
 .login-cover-left {
   transform: translateX(-100%);  /* slides to cover left side */
-  border-radius: var(--radius-xl) 185px 185px var(--radius-xl);
+  border-radius: var(--radius-xl) 160px 160px var(--radius-xl);
 }
 
 .login-cover .login-sign-up{
